features :
01- added Rank for user