@@ -9,7 +9,8 @@
                 </md-button>
             </div>
             <span>{{lang.menu_item_folders}}</span>
-            <md-button ng-click="ctrl.reloadFolders()" class="md-icon-button" tooltip="{{lang.reload}}">
+            <md-button ng-click="ctrl.reloadFolders()" class="md-icon-button"
+                       tooltip="{{lang.reload}}">
                 <md-icon md-svg-icon="refresh"></md-icon>
             </md-button>
             <span flex></span>
