@@ -1,2 +1,4 @@
 features :
-01- added Rank for user
+01- added Rank for user.
+02- added counter for Folders.
+03- added counter for Central Archive.
